# CoreOverlay

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  Versionfile  build.rs  engine.h  rust-toolchain.toml
.circleci/: config.yml
Docs/: Files.md  Overview.md  UsingTechs.md
Example/Example/: ContentView.swift  ExampleApp.swift
Example/Example.xcodeproj/: project.pbxproj
Example/ExampleTests/: ExampleTests.swift
Example/ExampleUITests/: ExampleUITests.swift  ExampleUITestsLaunchTests.swift
Protos/: bidirectional-stream.proto  example.proto
Resources/: fib.js
Resources/sample/: Makefile  hello-rust.rs  sample.swift
Resources/sample/go/: go.mod
Scripts/: setup-toolchains.sh
Sources/CBreeze/: COperatingSystem.swift  Cstring.swift  README.md
Sources/CLI/: CommandProcedure.swift  MainCLI.swift  PackageBuilder.swift  Shell.swift  main.swift
Sources/CLI/Commands/: Build.swift  Create.swift  MakeBylib.swift  Setup.swift  UpdateToolchain.swift
Sources/CLevelDB/: module.modulemap
Sources/COLibs/: COLogger.swift  CORPC.swift
Sources/CWasmer/: CWasmer.hpp  module.modulemap
Sources/CWasmer/include/: CWasmer.h  CWasmer.hpp
Sources/CWastime/: README.md
Sources/CWastime/include/: module.modulemap 
Sources/CoreOverlay/: CoreOverlay.swift  Integrator.swift  InternetProtocol.swift  KHNode.swift  KHSperNode.swift  KHashTable.swift  Kademlia.swift  Math.swift  OverlayComputer.swift  OverlayPackage.swift  SCNode.swift  SocketConnection.swift  WASMCanister.swift  WasmNortalize.swift
Sources/CoreOverlay/Kademlia/: KHSperNode.swift  KHashTable.swift  Kademlia.swift  KademliaNode.swift  Node.swift  ProtocolMethod.swift  RoutingTable.swift
Sources/CoreOverlay/WASMBox/: AsyncWASMCanister.swift  JCWASMCanister.swift  WASMCanister.swift
Sources/CoreOverlay/WASMCanister/: JCWASMCanister.swift  WASMCanister.swift
Sources/Libs/: SHA1.cpp  SHA1.hpp
Sources/Libs/include/: Libs.h
Sources/OverlayDB/: OverlayDB.swift  SQLiteBackend.swift
Sources/OverlayDHT/: Connections.swift  DHT+Math.swift  DHT+Utils.swift  DHTNode.swift  FastConnection.swift  HashTable.swift  KNode.swift  KTable.swift  Kbucket.swift  Node.swift  OverlayDHT.swift  SocketConnection.swift  Store.swift
Sources/OverlayFundation/: CBridge.swift  COMath.swift
Sources/Protobuf.Generated/: ModuleKeep.swift  bidirectional-stream.pb.swift  dht.pb.swift  example.pb.swift
Sources/Runtime/: JSCoreRunner.swift  WASM3Runner.swift  WasmInsight.swift  Wasmer.swift  WasmerRunner.swift  WebAssembly.swift
Sources/SQLiteBackend/: SQLiteBackend.swift
Sources/SwiftlyDHT/: KNode.swift  Logger.swift  Math.swift  PeerConnection.swift  SCNode.swift  SocketConnection.swift  SwitlyDHT.swift
Sources/Wasmer/: Wasmer.swift
Sources/WasmerBackend/: ProgramLoader.cpp  ProgramLoader.hpp  ProgramLoaderWrapper.h  ProgramLoaderWrapper.mm
Tests/CoreOverlayTests/: CommonCryptoAlgorithmTests.swift  CoreOverlayMathTests.swift  CoreOverlayTests.swift  SocketConnectionTests.swift
Tests/SwiftlyDHTTests/: CommonCryptoAlgorithmTests.swift  SocketConnectionTests.swift  SwiftlyDHTMathTests.swift  SwitlyDHTTests.swift
Tests/SwitlyDHTTests/: SwitlyDHTTests.swift
Tools/: compiler.sh  generate-headers.sh  generate-modulemap.sh  setup.sh
apps/macos/ComputeDHT/: ComputeDHTApp.swift  ContentView.swift  Item.swift
apps/macos/ComputeDHT.xcodeproj/: project.pbxproj
co-cli/: go.mod  main.go
compute-swift/: Package.resolved  Package.swift  README.md
crates/algs/: Cargo.toml
crates/compute-pkg/: Cargo.toml
crates/compute-pkg/src/: lib.rs
crates/compute-vector/: Cargo.toml
crates/computestd/: Cargo.toml
crates/computestd/src/: logger.rs
crates/cpdns/: Cargo.toml
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: types.rs
crates/replicadb/: Cargo.toml
docs/: FileSystem.md  FilesFormats.md  SuperNode.md  UsingTechs.md
documentation/: FileSystem.md  Overview.md  UsingTechs.md
include/: engine.h  module.modulemap
lib/algs/: Cargo.toml
lib/codb/: Cargo.toml
lib/cologger/: Cargo.toml
lib/compute-ip/: Cargo.toml
lib/compute-vm/: Cargo.toml
lib/coprotocol/: Cargo.toml
lib/coprotocol/src/: lib.rs  node.rs  routing.rs  rpc.rs  store.rs
lib/coruntime/: Cargo.toml
lib/devhelper/: Cargo.toml
lib/devhelper/src/: lib.rs  memorytils.rs  under_construction.rs
lib/dhtclient/: Cargo.toml
lib/dhtclient/src/: main.rs
lib/ovdevhelper/: Cargo.toml
lib/overlayfs/: Cargo.toml
lib/overlayip/: Cargo.toml
lib/overlaystd/: Cargo.toml
lib/ovlyip/: Cargo.toml
lib/ovlypkg/: Cargo.toml  README.md
lib/ovlypkg/src/: installer.rs  lib.rs  pkgmaker.rs
lib/ovlystd/: Cargo.toml
lib/ovlyvm/: Cargo.toml
lib/ovryvm/: Cargo.toml
lib/platform/: Cargo.toml
lib/protocol/: Cargo.toml  README.md
lib/protocol/src/: bootstrap.rs  lib.rs  main.rs  node.rs  routing.rs  rpc.rs  storage.rs  types.rs
lib/replicadb/: Cargo.toml
lib/replicafs/: Cargo.toml
lib/replicrypt/: Cargo.toml
proto/: bidirectional-stream.proto  dht.proto
resources/example-config/: NodeConfig.toml
resources/sample/: Makefile  sample.swift
resources/scripts/: compile-all.sh
rust-src/: arch.rs  file_system.rs  lib.rs  pingpong.rs  sha.rs  wasmer_integration.rs
rust-src/protocol/: math.rs  methods.rs  node.rs
src/: arch.rs  file_system.rs  key_value_store.rs  lib.rs  logger.rs  overlay_core.rs  overlay_file_system.rs  overlay_key_value_store.rs  overlay_messaging.rs  overlay_ping.rs  pingpong.rs  wasmer_integration.rs
src-go/: go.mod
src-go/algs/: math.go
src-rust/: arch.rs  lib.rs  main.rs  messaging.rs  wasmer_integration.rs
src-swift/: Package.swift
swift-src/CLI/: MainCLI.swift  PackageBuilder.swift
swift-src/CoreOverlay/: OverlayPackage.swift
swift-src/OverlayDB/: OverlayDB.swift
swift-src/OverlayDHT/: DHT+Utils.swift
swift-src/OverlayFundation/: COLogger.swift  CORPC.swift
swift-src/Protobuf.Generated/: dht.pb.swift
swift-src/Runtime/: WebAssembly.swift
tools/: rust-setup.sh  setup-coreoverlay-cli.sh  setup-vscode.sh
(+60 files in other folders)
