[package]
name = "ComputeDHT"
version = "0.1.1"
authors = ["Shota Shimazu <shota.shimazu@mgq.app>"]
description = "Core for ComputeDHT"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shotastage/ComputeDHT"
exclude = ["/src-swift", "/apps", "*.swift"]
publish = false

[lib]
name = "computedht"
crate-type = ["staticlib", "cdylib"]
path = "src-rust/lib.rs"

[[bin]]
name = "computecell"
path = "src-rust/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hex = "0.4"
libc = "0.2"
sha1 = "0.10"
tokio = { version = "1.43", features = ["full"] }
uniffi = "0.28"
uniffi_macros = "0.28"
wasmer = "5.0"
# swift-bridge = "0.1"

# Internal dependencies
algs = { path = "lib/algs" }
compute-pkg = { path = "lib/compute-pkg" }
compute-vm = { path = "lib/compute-vm" }
computestd = { path = "lib/computestd" }
protocol = { path = "lib/protocol" }
replicadb = { path = "lib/replicadb" }
replicafs = { path = "lib/replicafs" }
cpdns = { path = "lib/cpdns" }
platform = { path = "lib/platform" }

[workspace]
members = [
    "lib/algs",
    "lib/computestd",
    "lib/compute-pkg",
    "lib/compute-vm",
    "lib/devhelper",
    "lib/protocol",
    "lib/replicadb",
    "lib/replicafs",
    "lib/replicrypt",
    "lib/dhtclient",
    "lib/cpdns",
    "lib/platform",
]

[workspace.package]
version = "0.1.1"
authors = ["Shota Shimazu <shota.shimazu@mgq.app>"]
edition = "2021"
homepage = "https://mgq.app/"
license = "Apache-2.0"
repository = "https://github.com/shotastage/ComputeDHT"

[build-dependencies]
anyhow = "1.0"
cbindgen = "0.28"
uniffi_build = "0.28"
# rustc_version = "0.4"
# swift-bridge-build = "0.1"

[dev-dependencies]
anyhow = "1.0"
