[package]
name = "ComputeDHT"
version = "0.1.1"
authors = ["Shota Shimazu <shota.shimazu@mgq.app>"]
description = "Core for ComputeDHT"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shotastage/ComputeDHT"
exclude = ["/src-swift", "/apps", "*.swift"]
publish = false

[lib]
name = "computedht"
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "computecell"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hex = "0.4"
libc = "0.2"
sha1 = "0.10"
tokio = { version = "1.43", features = ["full"] }
uniffi = "0.28"
uniffi_macros = "0.28"
wasmer = "5.0"
# swift-bridge = "0.1"

# Internal dependencies
algs = { path = "crates/algs" }
compute-pkg = { path = "crates/compute-pkg" }
compute-vm = { path = "crates/compute-vm" }
computestd = { path = "crates/computestd" }
protocol = { path = "crates/protocol" }
replicadb = { path = "crates/replicadb" }
replicafs = { path = "crates/replicafs" }
cpdns = { path = "crates/cpdns" }
platform = { path = "crates/platform" }

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
authors = ["Shota Shimazu <shota.shimazu@mgq.app>"]
edition = "2021"
homepage = "https://mgq.app/"
license = "Apache-2.0"
repository = "https://github.com/shotastage/ComputeDHT"

[build-dependencies]
anyhow = "1.0"
cbindgen = "0.28"
uniffi_build = "0.28"
# rustc_version = "0.4"
# swift-bridge-build = "0.1"

[dev-dependencies]
anyhow = "1.0"
