[package]
name = "protocol"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Asynchronous runtime and utilities
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.85"

# Networking and bytes handling
bytes = "1.9.0"
socket2 = "0.5.8"

# Serialization/Deserialization
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }

# Cryptography and randomization
sha1 = "0.10.6"
rand = "0.9.0"

# Logging and diagnostics
log = "0.4.25"
env_logger = "0.11.2"

# Error handling
thiserror = "2.0.11"
anyhow = "1.0.95"

# Concurrency and storage
parking_lot = "0.12.3"  # Thread-safe primitives
sled = "0.34.7"        # Embedded database

[dev-dependencies]
# Testing utilities
tokio-test = "0.4.4"
pretty_assertions = "1.4.1"

[[bin]]
name = "kdserver"
path = "src/main.rs"
