[package]
name = "dhtclient"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local protocol dependency
protocol = { path = "../protocol" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Utilities
hex = "0.4.3"

sha1 = "0.10.6"
