[package]
name = "protocol"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Asynchronous runtime and utilities
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Networking
bytes = "1.9"
socket2 = "0.5"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Cryptography and hashing
sha1 = "0.10"
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
thiserror = "2.0"
parking_lot = "0.12"  # Efficient mutex implementation

anyhow = "1.0"
sled = "0.34"


[dev-dependencies]
# For testing
tokio-test = "0.4"
pretty_assertions = "1.4"
