[package]
name = "protocol"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Asynchronous runtime and utilities
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.30"
async-trait = "0.1.77"

# Networking and bytes handling
bytes = "1.9.0"
socket2 = "0.5.5"

# Serialization/Deserialization
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }

# Cryptography and randomization
sha1 = "0.10.6"
rand = "0.8.5"

# Logging and diagnostics
log = "0.4.21"
env_logger = "0.11.2"

# Error handling
thiserror = "2.0.1"
anyhow = "1.0.80"

# Concurrency and storage
parking_lot = "0.12.1"  # Thread-safe primitives
sled = "0.34.7"        # Embedded database

[dev-dependencies]
# Testing utilities
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"

[[bin]]
name = "kdserver"
path = "src/main.rs"
